--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title:              Clean Blog
+title:              社会医学若手フォーラム
 email:              your-email@example.com
-description:        A Blog Theme by Start Bootstrap
-author:             Start Bootstrap
-baseurl:            "/startbootstrap-clean-blog-jekyll"
-url:                "https://startbootstrap.github.io"
+description:        description
+author:             S. Wada
+baseurl:            "/sample"
+url:                "https://s-wakate.github.io"
 
 # Social Profiles
 twitter_username:   SBootstrap
