--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title:              社会医学若手フォーラム
 email:              your-email@example.com
 description:        description
-author:             S. Wada
-baseurl:            "/sample"
+author:             社会医学若手フォーラム
+baseurl:            "/"
 url:                "https://s-wakate.github.io"
 
 # Social Profiles
