--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
-title:              社会医学若手フォーラム
+title:              社会医学若手フォーラム（タイトル）
 email:              your-email@example.com
-description:        description
+description:        概要記載
 author:             社会医学若手フォーラム
 baseurl:            "/"
 url:                "https://s-wakate.github.io"
 
 # Social Profiles
-twitter_username:   SBootstrap
-github_username:    StartBootstrap
-facebook_username:  StartBootstrap
+twitter_username:   
+github_username:    s-wakate
+facebook_username:  
 instagram_username:  
 linkedin_username:
 
 # Add your google-analytics ID here to activate google analytics
-google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
+google_analytics:    # out your google-analytics code
 
 # Build settings
 markdown:           kramdown
