secret mail address

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:              社会医学若手フォーラム（タイトル）
-email:              your-email@example.com
+email:              
 description:        概要記載
 author:             社会医学若手フォーラム
 baseurl:            "/"
