--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title:              社会医学若手フォーラム（タイトル）
+title:              社会医学若手フォーラム（仮）
 email:              
-description:        概要記載
-author:             社会医学若手フォーラム
+description:        概要
+author:             社会医学若手フォーラム（仮）
 baseurl:            "/"
 url:                "https://s-wakate.github.io"
 
