--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:              社会医学若手フォーラム（仮）
 email:              
-description:        概要
+description:        under construction
 author:             社会医学若手フォーラム（仮）
 baseurl:            "/"
 url:                "https://s-wakate.github.io"
