第10回フォーラム対応版
案内文がFixしたので、それを反映しました。

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title:              社会医学若手フォーラム（仮）
+title:              社会医学若手フォーラム
 email:              
-description:        under construction
-author:             社会医学若手フォーラム（仮）
+description:        （仮）
+author:             社会医学若手フォーラム
 baseurl:            "/"
 url:                "https://s-wakate.github.io"
 
