aboutページの更新と次回フォーラム用ページの追加
`about`に成り立ちやこれまでの開催概要をまとめてみました。

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:              社会医学若手フォーラム
 email:              
-description:        （仮）
+description:        
 author:             社会医学若手フォーラム
 baseurl:            "/"
 url:                "https://s-wakate.github.io"
