--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:              社会医学若手フォーラム
-email:              
+email:              shakai.wakate@gmail.com
 description:        
 author:             社会医学若手フォーラム
 baseurl:            "/"
